[package]
name = "trackpad_haptic"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jasonjmcghee/trackpad_haptic"
description = "A simple interface into controlling the mac trackpad haptic feedback"

[dependencies]
icrate = { version = "0.1", features = ["AppKit_all", "Foundation_NSThread"] }

[[example]]
name = "morse"

[[example]]
name = "basic"
